--- a/src/main/resources/assets/wynn/lang/en_us.json
+++ b/src/main/resources/assets/wynn/lang/en_us.json
@@ -1,4 +1,12 @@
 {
+  "wynn.tooltip.rarity.depressing": "§7Depressing§r",
+  "wynn.tooltip.rarity.unique": "§eUnique§r",
+  "wynn.tooltip.rarity.rare": "§dRare§r",
+  "wynn.tooltip.rarity.legendary": "§bLegendary§r",
+  "wynn.tooltip.rarity.fabled": "§cFabled§r",
+  "wynn.tooltip.rarity.mythic": "§5Mythic§r",
+  "wynn.tooltip.rarity.set": "§aSet§r",
+  "wynn.tooltip.rarity.normal": "§f§r",
   "itemGroup.wynn.wynntab": "Wynnclone",
   "item.wynn.testitem": "Test Item"
 }
