Textures, Loot chest item, more tooltip info.

--- a/src/main/resources/assets/wynn/lang/en_us.json
+++ b/src/main/resources/assets/wynn/lang/en_us.json
@@ -1,17 +1,26 @@
 {
-  "wynn.tooltip.rarity.depressing": "Depressing Item",
-  "wynn.tooltip.rarity.unique": "Unique Item",
-  "wynn.tooltip.rarity.rare": "Rare Item",
-  "wynn.tooltip.rarity.legendary": "Legendary Item",
-  "wynn.tooltip.rarity.fabled": "Fabled Item",
-  "wynn.tooltip.rarity.mythic": "Mythic Item",
-  "wynn.tooltip.rarity.set": "Set Item",
-  "wynn.tooltip.rarity.normal": "Normal Item",
+  "wynn.tooltip.rarity.depressing": "Depressing",
+  "wynn.tooltip.rarity.unique": "Unique",
+  "wynn.tooltip.rarity.rare": "Rare",
+  "wynn.tooltip.rarity.legendary": "Legendary",
+  "wynn.tooltip.rarity.fabled": "Fabled",
+  "wynn.tooltip.rarity.mythic": "Mythic",
+  "wynn.tooltip.rarity.set": "Set",
+  "wynn.tooltip.rarity.normal": "Normal",
+  "wynn.tooltip.speed.superslow": "Super Slow",
+  "wynn.tooltip.speed.veryslow": "Very Slow",
+  "wynn.tooltip.speed.slow": "Slow",
+  "wynn.tooltip.speed.normal": "Normal",
+  "wynn.tooltip.speed.fast": "Fast",
+  "wynn.tooltip.speed.speed": "Attack Speed",
+  "wynn.tooltip.damage.damage": "Neutral Damage",
+  "wynn.tooltip.item": "Item",
   "itemGroup.wynn.wynntab": "Wynnclone",
   "item.wynn.testitem": "Test Item",
   "item.wynn.assassin_weapon": "Dagger",
   "item.wynn.archer_weapon": "Bow",
   "item.wynn.warrior_weapon": "Spear",
   "item.wynn.mage_weapon": "Wand",
-  "item.wynn.shaman_weapon": "Relik"
+  "item.wynn.shaman_weapon": "Relik",
+  "item.wynn.lootbox": "Loot Box"
 }
