--- a/src/main/resources/assets/wynn/lang/en_us.json
+++ b/src/main/resources/assets/wynn/lang/en_us.json
@@ -13,7 +13,8 @@
   "wynn.tooltip.speed.normal": "Normal",
   "wynn.tooltip.speed.fast": "Fast",
   "wynn.tooltip.speed.speed": "Attack Speed",
-  "wynn.tooltip.damage.damage": "Neutral Damage",
+  "wynn.tooltip.damage.damage": "Damage",
+  "wynn.tooltip.minespeed": "Mining Speed",
   "wynn.tooltip.item": "Item",
   "itemGroup.wynn.wynntab": "Wynnclone",
   "item.wynn.testitem": "Test Item",
