Unbreaking fully functional. Other modifiers display but are cosmetic for now.

--- a/src/main/resources/assets/wynn/lang/en_us.json
+++ b/src/main/resources/assets/wynn/lang/en_us.json
@@ -15,6 +15,10 @@
   "wynn.tooltip.speed.speed": "Attack Speed",
   "wynn.tooltip.damage.damage": "Damage",
   "wynn.tooltip.minespeed": "Mining Speed",
+  "wynn.tooltip.ms": "Walk Speed",
+  "wynn.tooltip.power": "Damage",
+  "wynn.tooltip.unbreaking": "Unbreaking",
+  "wynn.tooltip.tierup": "Mining Tier",
   "wynn.tooltip.item": "Item",
   "itemGroup.wynn.wynntab": "Wynnclone",
   "item.wynn.testitem": "Test Item",
