Movespeed, power, item images

--- a/src/main/resources/assets/wynn/lang/en_us.json
+++ b/src/main/resources/assets/wynn/lang/en_us.json
@@ -27,5 +27,6 @@
   "item.wynn.warrior_weapon": "Spear",
   "item.wynn.mage_weapon": "Wand",
   "item.wynn.shaman_weapon": "Relik",
+  "item.wynn.pickaxe": "Pickaxe",
   "item.wynn.lootbox": "Loot Box"
 }
